--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/5Y0l9aj0FlT/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/5Y0l9aj0FlT/slide.html
@@ -1,3 +1,51 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Apprentice - Basic Electricity</title>
+  <meta charset="UTF-8">
+  <!DOCTYPE html>
+  <style type="text/css">
+  body {
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    background: #262626;
+    background-image: "htmlBackground.png";
+    overflow: hidden;
+  }
+  .mainWindow {
+    position: fixed;
+    left: 0%;
+    top: 0%
+    margin: auto;
+    padding:0;
+    width: 100%;
+    height:100vh;
+    overflow: hidden;
+  }
+
+    .playerControls {
+    position: absolute;
+    left: 0px;
+    bottom:0px;
+    margin: auto;
+    width: 100%;
+  }
+
+  .slideHeading{
+    position: fixed;
+    margin: auto;
+    width: 100%;
+    top: 20%
+    font-size: xx-large;
+  }
+
+  </style>
+
+</head>
+<body>
+  <div id="main" class="mainWindow" style="align-content: center;"></div>
+  <audio id='music' controls='controls' class="playerControls"></audio>
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
@@ -16,7 +64,7 @@
    width="679.25629"
    height="509.90356"
    viewBox="0 0 679.25626 509.90357"
-   sodipodi:docname="slide2Svg.svg"
+   sodipodi:docname="slide.svg"
    inkscape:version="0.92.3 (2405546, 2018-03-11)"
    style="shape-rendering:crispEdges;enable-background:new"><metadata
      id="metadata8"><rdf:RDF><cc:Work
@@ -12734,9 +12782,9 @@
      inkscape:window-height="1442"
      id="namedview4"
      showgrid="false"
-     inkscape:zoom="2.8284272"
-     inkscape:cx="342.62156"
-     inkscape:cy="266.8937"
+     inkscape:zoom="1.4142136"
+     inkscape:cx="246.16801"
+     inkscape:cy="248.39426"
      inkscape:window-x="-11"
      inkscape:window-y="69"
      inkscape:window-maximized="1"
@@ -12853,6 +12901,7 @@
      id="tspan3395"
      x="112.85476"
      y="180.11456" /></text>
+
 
 
 
@@ -13015,6 +13064,7 @@
 
 
 
+
 </g>
 <g
    style="display:inline;opacity:0.98999999"
@@ -13153,6 +13203,7 @@
 
 
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:7.51497555px;line-height:1.25;font-family:Arial;-inkscape-font-specification:Arial;letter-spacing:0px;word-spacing:0px;display:inline;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.93937194"
@@ -13165,6 +13216,7 @@
      x="146.83766"
      y="3.8735619"
      style="font-size:35.06988525px;fill:#ffffff;fill-opacity:1;stroke-width:0.93937194">The Atom</tspan></text>
+
 
 
 
@@ -13223,7 +13275,14 @@
 
 
 
-</g><g
+
+<ellipse
+   style="opacity:1;vector-effect:none;fill:#4d4d4d;fill-opacity:1;stroke:none;stroke-width:3;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke"
+   id="path3488"
+   cx="54.098663"
+   cy="174.79907"
+   rx="80.963722"
+   ry="75.30687" /></g><g
      inkscape:groupmode="layer"
      id="layer6"
      inkscape:label="Layer2"
@@ -13258,6 +13317,7 @@
      id="tspan19991"
      x="126.56143"
      y="114.77009" /></text>
+
 
 
 
@@ -13334,6 +13394,7 @@
 
 
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:26.99303627px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.72302777"
@@ -13370,6 +13431,7 @@
 
 
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:27.95367813px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.74875927"
@@ -13382,6 +13444,7 @@
      x="-30.60042"
      y="439.91101"
      style="font-size:20.03993416px;fill:#ffffff;stroke-width:0.74875927">Neutrally charged neutrons.</tspan></text>
+
 
 
 
@@ -13611,6 +13674,7 @@
 
 
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:37.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;fill:#ffffff;fill-opacity:1;stroke:none"
@@ -13622,6 +13686,7 @@
      id="tspan3593"
      x="41.555092"
      y="230.86606">Planets = Electrons</tspan></text>
+
 
 
 
@@ -13698,6 +13763,7 @@
 
 
 
+
 </g><g
        style="display:inline;opacity:0.77868808;stroke:#00ff00;stroke-opacity:1;shape-rendering:crispEdges"
        id="missingElecron2-8-0"
@@ -13713,6 +13779,7 @@
      x="623.45087"
      y="60.626125"
      style="stroke:#00ff00;stroke-width:0.62900025;stroke-opacity:1" /></text>
+
 
 
 
@@ -13910,6 +13977,7 @@
 
 
 
+
 </g></g><g
      transform="matrix(1.1396517,0,0,1.1396517,-83.264223,-5.5828845)"
      inkscape:label="#g3808"
@@ -13934,6 +14002,7 @@
      x="623.45087"
      id="tspan4269-4-9"
      sodipodi:role="line" /></text>
+
 
 
 
@@ -14137,6 +14206,7 @@
 
 
 
+
 </g></g><g
      transform="matrix(1.1396517,0,0,1.1396517,-83.264224,-5.5828841)"
      inkscape:label="#g3808"
@@ -14184,6 +14254,7 @@
 
 
 
+
 </g></g></g><text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:35.06988525px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.92000002;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.93937194;shape-rendering:crispEdges;enable-background:new"
@@ -14197,6 +14268,7 @@
      y="116.79633"
      style="font-size:25.04991722px;fill:#ffffff;stroke-width:0.93937194">More Positive</tspan></text>
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:35.06988525px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.92000002;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.93937194;shape-rendering:crispEdges;enable-background:new"
@@ -14209,6 +14281,7 @@
      x="55.802288"
      y="114.30724"
      style="font-size:25.04991722px;fill:#ffffff;stroke-width:0.93937194">More Negative</tspan></text>
+
 
 </g>
 
@@ -14299,6 +14372,7 @@
 
 
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:27.55372047px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none;enable-background:new"
@@ -14311,6 +14385,7 @@
      x="609.19238"
      y="352.26181"
      style="fill:#ffffff;stroke:none;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none">N</tspan></text>
+
 
 
 
@@ -14379,6 +14454,7 @@
 
 
 
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:27.55372047px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none;enable-background:new"
@@ -14390,6 +14466,7 @@
      x="609.19238"
      y="352.26181"
      style="fill:#ffffff;stroke:#000000;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none">N</tspan></text>
+
 
 
 
@@ -14423,6 +14500,7 @@
      x="291.93253"
      y="355.42789"
      style="font-size:25.04991722px;fill:#ffffff;stroke-width:0.93937194">No Charge</tspan></text>
+
 
 
 <path
@@ -14493,3 +14571,12 @@
      id="layer18"
      inkscape:label="Net Charge"
      style="display:none" /></svg>
+
+</body>
+<script src="JavaScripts/d3.min.js"></script>
+<script src="JavaScripts/TweenMax.min.js"></script>
+<script src="JavaScripts/draggable.js"></script>
+<script src="JavaScripts/DrawSVGPlugin.min.js"></script>
+<script src="JavaScripts/MorphSVGPlugin.js"></script>
+<script src="slide.js"></script>
+</html>
