--- a/Menu.html
+++ b/Menu.html
@@ -58,7 +58,7 @@
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Mini Manual Training/Mini Manual Training.html">Mini Manual Training</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Basic Electricity/Basic Electricity.html">Basic Electricity</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html">Monogram Oven Single Relay</a>
-    <a target="_blank" href="https://robertmayeight.github.io/Training/New%20Hire%20Training/Apprentice_Basic_Electricity_Test/Basic_Electricity%20-%20Storyline%20output/slide11.html">Series-Parallel Circuits</a>
+    <a target="_blank" href="https://robertmayeight.github.io/Training/New%20Hire%20Training/Apprentice_Basic_Electricity_Test/slide11/slide11.html">Series-Parallel Circuits New</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New%20Hire%20Training/Apprentice_Basic_Electricity_Test/slide11/story_html5.html">Basic Electricity - Storyline</a>
   </div>
 </div>
