--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
@@ -21,6 +21,7 @@
     width: 100%;
     height:100vh;
     overflow: hidden;
+    opacity: 0;
   }
    .htmlArea {
     position: absolute;
@@ -62,9 +63,37 @@
     padding: 10px
 }
 
+.loader {
+  position: fixed;
+    left: 50%;
+    top: 50%
+    margin: auto;
+    padding:0;
+    width: 100%;
+    overflow: hidden;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 </style>
 </head>
-<body>
+<body onload="myFunction()">
   <div id="main" class="mainWindow" style="align-content: center;">
   	
   </div>
@@ -96,6 +125,7 @@
 <input type="radio" name="voltage" value="24" id="rb4" onclick="alert('INCORECT - Try Again')">&nbsp&nbsp24 Volts<br> 
 <input type="radio" name="voltage" value="-24" id="rb5" onclick="alert('INCORECT - Try Again')">&nbsp-24 Volts<br> 
 </form>
+<div id="myLoader" class="loader"></div>
 </body>
 <script>
 	function setCheckBox1(){
@@ -103,6 +133,14 @@
 		checkBox1[i].checked = false;
 	}
 	setCheckBox1();
+
+  function myFunction() {
+  myVar = setTimeout(showPage, 3000);
+}
+function showPage() {
+  document.getElementById("myLoader").style.display = "none";
+  document.getElementById("main").style.opacity = 1;
+}
 
 
 </script>
