--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
@@ -64,9 +64,9 @@
 }
 
 .loader {
-  position: fixed;
-    left: 50%;
-    top: 50%
+  position: absolute;
+  left: 50%;
+  top: 50%;
     margin: auto;
     padding:0;
     width: 100%;
@@ -80,6 +80,19 @@
   animation: spin 2s linear infinite;
 }
 
+#cover{
+   position: fixed;
+    left: 0%;
+    top: 0%
+    margin: auto;
+    padding:0;
+    width: 100%;
+    height:100vh;
+    overflow: hidden;
+    background-color: black;
+    border: 10px;
+    /*opacity:0;*/
+}
 /* Safari */
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
@@ -93,7 +106,7 @@
 
 </style>
 </head>
-<body onload="myFunction()">
+<body onload="showPage()">
   <div id="main" class="mainWindow" style="align-content: center;">
   	
   </div>
@@ -125,7 +138,9 @@
 <input type="radio" name="voltage" value="24" id="rb4" onclick="alert('INCORECT - Try Again')">&nbsp&nbsp24 Volts<br> 
 <input type="radio" name="voltage" value="-24" id="rb5" onclick="alert('INCORECT - Try Again')">&nbsp-24 Volts<br> 
 </form>
-<div id="myLoader" class="loader"></div>
+<div id= "cover">
+<div id="myLoader" class="loader" ></div>
+</div>
 </body>
 <script>
 	function setCheckBox1(){
@@ -138,7 +153,7 @@
   myVar = setTimeout(showPage, 3000);
 }
 function showPage() {
-  document.getElementById("myLoader").style.display = "none";
+  document.getElementById("cover").style.display = "none";
   document.getElementById("main").style.opacity = 1;
 }
 
