--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
@@ -71,7 +71,7 @@
     padding:0;
     width: 100%;
     overflow: hidden;
-  border: 16px solid #f3f3f3;
+  border: 16px solid gray;
   border-radius: 50%;
   border-top: 16px solid #3498db;
   width: 120px;
