--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Slide11/slide.html
@@ -65,13 +65,13 @@
 
 .loader {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 40%;
+  top: 40%;
     margin: auto;
     padding:0;
     width: 100%;
     overflow: hidden;
-  border: 16px solid gray;
+  border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #3498db;
   width: 120px;
@@ -81,17 +81,11 @@
 }
 
 #cover{
-   position: fixed;
-    left: 0%;
-    top: 0%
-    margin: auto;
-    padding:0;
+   position: absolute;
+   margin: auto;
     width: 100%;
     height:100vh;
-    overflow: hidden;
     background-color: black;
-    border: 10px;
-    /*opacity:0;*/
 }
 /* Safari */
 @-webkit-keyframes spin {
