--- a/Menu.html
+++ b/Menu.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+        window.location.href = "https://robertmayeight.github.io/WebPage/Menu.html";
+    </script>
 <style>
 .dropbtn {
     background-color: #4CAF50;
